--- a/css/main.css
+++ b/css/main.css
@@ -898,22 +898,26 @@ h3.my-profession {
     color: var(--text-black-700);
     font-weight: 400;
 }
-.contact .contact-form {
+.contact form .contact-form {
     flex: 0 0 100%;
     max-width: 100%;
 }
-.contact .contact-form .col-6 {
+.contact form .contact-form .col-9 {
+    flex: 40% 40% 20%;
+    max-width: 50%;
+}
+.contact form .contact-form .col-6 {
     flex: 0 0 50%;
     max-width: 50%;
 }
-.contact .contact-form .col-12 {
+.contact form .contact-form .col-12 {
     flex: 0 0 100%;
     max-width: 100%;
 }
-.contact .contact-form .form-item {
+.contact form .contact-form .form-item {
     margin-bottom: 30px;
 }
-.contact .contact-form .form-item .form-control {
+.contact form .contact-form .form-item .form-control {
     width: 100%;
     height: 50px;
     border-radius: 25px;
@@ -924,13 +928,33 @@ h3.my-profession {
     color: var(--text-black-700);
     transition: all 0.3s ease;
 }
-.contact .contact-form .form-item .form-control:focus {
+.contact form .contact-form .form-item .form-control:focus {
     box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
-.contact .contact-form .form-item textarea.form-control {
+.contact form .contact-form .form-item textarea.form-control {
     height: 140px;
 }
 .contact .contact-form .btn {
     height: 50px;
     padding: 0 50px;
+    cursor: pointer;
 }   
+.contact .contact-form .form-item .up input {
+    display: none;
+}
+.contact .contact-form .form-item .up label {
+    display: none;
+    cursor: pointer;
+    display: block;
+    border-radius: 25px;
+    height: 50px;
+    width: 100%;
+    background: var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    padding: 13px;
+    font-size: 16px;
+    color: var(--text-black-700);
+    text-align: center;
+    transition: all 0.3s ease;
+    font-family: 'Pixelify Sans';
+}
